# Traffic-Proccessor

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  lychee.toml
.github/workflows/: main.yml
docs/: customer-handover.md  definition-of-done.md  development-process.md  roadmap.md  testing.md  user-acceptance-tests.md  user-stories.md
docs/architecture/: README.md
docs/architecture/adr/: ADR-001-async-http-communication.md  ADR-003-scapy-packet-capture.md  ADR-004-gate-as-reverse-proxy-with-ip-filtering  ADR-004-gate-as-reverse-proxy-with-ip-filtering.md  (+1 more)
error_server/: Dockerfile
gate/: app.py
reports/week2/: README.md  customer-meeting-transcript.md  llm-report.md  user-stories.md
reports/week3/: README.md  customer-review-transcript.md  llm-report.md  reflection.md  retrospective.md
reports/week4/: README.md  llm-report.md
reports/week5/: README.md  llm-report.md  reflection.md  retrospective.md  sprint-review-summary.md  sprint-review-transcript.md
reports/week6/: README.md  sprint-review-summary.md  sprint-review-transcript.md
reports/week7/: README.md
src/: Makefile  docker-compose.gate.yml  docker-compose.yml  qr_test.py
src/Traffic_Processor/: Dockerfile  test_TP+CN.py  tproc.py
src/cnss/: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
src/cnss/app/: db.py  main.py
src/cnss/app/core/: config.py
src/cnss/app/schemes/: packet.py
src/cnss/app/static/: app.js  index.html  styles.css
src/cnss/tests/: cnss_test.py
src/error_server/: app.py
src/gate/: app.py
(+3 files in other folders)
